--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,7 +20,7 @@ exampleyourauthorname:
   email: "your email"
   twitter: "@your twitter account"
 # you can add more authors bellow this comment
-exampleyourauthorname:
+Kavvadias:
   name: "Christos Kavvadias"
   bio: "student"
   uri: ""
